# sciedu-llm

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  example.env  main.py  plan.md  pyproject.toml
.deploy/dev/: cleanup.sh  compose.yaml
.deploy/snapshot/: cleanup.sh  compose.yaml  deploy.sh
.deploy/stage/: cleanup.sh  compose.yaml  deploy.sh
.github/workflows/: close.yaml  main.yaml  pull-request.yaml  stage.yaml
app/: dependencies.py  main.py
app/routers/: chat.py  health.py
app/schema/: chat.py  health.py
data/scripts/: README.md  _common.py  seed_corpus.py  seed_questions.py
docs/: agentic-protocol-design.md  llm-interaction-protocol-agentic.md
scripts/: judge_smoke.py  rag_smoke.py
src/: observability.py
src/admin_ui/: __init__.py  client.py  config.py  main.py
src/app/: dependencies.py  main.py
src/app/routers/: admin.py  chat.py  title.py
src/app/schema/: admin.py  chat.py  title.py
src/eval_ui/: __init__.py  config.py  main.py  runner.py
src/judge/: __init__.py  config.py  judge.py  metrics.py  quality.py
src/rag/: __init__.py  chunker.py  config.py  fusion.py  pipeline.py  reranker.py  retriever.py  retry.py
tests/: health_test.py  main_test.py  title_test.py
tests/admin_ui/: test_client.py  test_corpus_tree.py
tests/app/: admin_test.py  chat_test.py  dependencies_test.py  title_test.py
tests/eval_ui/: test_listings.py
tests/judge/: test_judge.py  test_metrics.py  test_quality.py
tests/rag/: test_chunker.py  test_config.py  test_fusion.py  test_reranker.py  test_retry.py
